<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/resultError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4DFFFFFF"
            android:padding="15dp"
            android:text="@string/error_message"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearlayoutalani"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_text"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

<!-- search button -->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4DFFFFFF"
                android:orientation="horizontal"
                android:layout_marginTop="5sp"
                android:padding="5dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#55FFFFFF"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterCityName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_name"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageSearch"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_search_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dataLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

 <!-- middle section (temp)     -->
                <LinearLayout
                    android:id="@+id/middle_section_overview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/weather_status_area"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="30sp"
                        android:text="@string/weather_status_text"
                        android:textColor="@color/white"
                        android:textSize="17sp">

                    </TextView>

                    <ImageView
                        android:id="@+id/resultWeatherPictures_area"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white">

                    </ImageView>

                    <TextView
                        android:id="@+id/temp_celsius_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/centigrade_text"
                        android:textColor="@color/white"
                        android:textSize="80sp">

                    </TextView>

                    <TextView
                        android:id="@+id/city_information_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/city_information_text"
                        android:textColor="@color/white">

                    </TextView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4sp"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/update_hour_area"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/update_hour_text"
                            android:textColor="@color/white">

                        </TextView>

                        <TextView

                            android:id="@+id/update_text_area"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/update_text"
                            android:textColor="@color/white"
                            android:textSize="13sp">

                        </TextView>


                    </LinearLayout>


                </LinearLayout>

  <!--   battom section detail   -->
                <LinearLayout
                    android:id="@+id/details_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80sp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/sunset">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="16dp"
                                android:text="@string/sunrise_text"
                                android:textColor="@color/white"
                                android:textSize="15sp">

                            </TextView>

                            <TextView
                                android:id="@+id/sunrise_data_area"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunrise_data_text"
                                android:textSize="13sp">

                            </TextView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/sunset">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunset_text_area"
                                android:textColor="@color/white"
                                android:textSize="15sp">

                            </TextView>

                            <TextView
                                android:id="@+id/sunset_data_area"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunset_data_text"
                                android:textSize="13sp">

                            </TextView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/wind">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_text_area"
                                android:textColor="@color/white"
                                android:textSize="15sp">

                            </TextView>

                            <TextView
                                android:id="@+id/wind_data_area"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_data_text"
                                android:textSize="13sp">

                            </TextView>


                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/pressure">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure_text_area"
                                android:textColor="@color/white"
                                android:textSize="15sp">

                            </TextView>

                            <TextView
                                android:id="@+id/pressure_data_area"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure_data_text"
                                android:textSize="13sp">

                            </TextView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/humudity">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humudity_text_area"
                                android:textColor="@color/white"
                                android:textSize="15sp">

                            </TextView>

                            <TextView
                                android:id="@+id/humudity_data_area"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humudity_data_text"
                                android:textSize="13sp">

                            </TextView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/location_use_image"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/location_icon">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/location_use_text"
                                android:textColor="@color/white"
                                android:textSize="15sp">

                            </TextView>

                            <TextView
                                android:id="@+id/location_active_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/location_active_status_text"
                                android:textSize="13sp">

                            </TextView>


                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>
   <!--   battom section detail end    -->
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

